--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cookie-parser": "~1.4.4",
     "csv": "^6.3.9",
     "debug": "~2.6.9",
